--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "scrollreveal": "^4.0.9",
+    "sweetalert2": "^11.21.2",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
