--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
+    "sass": "^1.89.0",
     "scrollreveal": "^4.0.9",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.6"
