--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.7.1",
     "@reduxjs/toolkit": "^2.8.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
@@ -20,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
+    "react-social-icons": "^6.24.0",
     "sass": "^1.89.0",
     "scrollreveal": "^4.0.9",
     "sweetalert2": "^11.21.2",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/vite": "^4.1.5",
+    "@types/glidejs__glide": "^3.6.6",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/scrollreveal": "^0.0.11",
