--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@eslint/js": "^9.25.0",
     "@tailwindcss/vite": "^4.1.5",
     "@types/glidejs__glide": "^3.6.6",
+    "@types/node": "^22.15.27",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/scrollreveal": "^0.0.11",
