--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@splidejs/splide": "^4.1.4",
     "@stripe/stripe-js": "^7.4.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "datatables.net": "^2.3.2",
     "datatables.net-buttons": "^3.2.4",
     "datatables.net-buttons-dt": "^3.2.4",
@@ -33,6 +34,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
