--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "datatables.net-buttons": "^3.2.4",
     "datatables.net-buttons-dt": "^3.2.4",
     "datatables.net-dt": "^2.3.2",
+    "datatables.net-react": "^1.0.1",
     "jquery": "^3.7.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
@@ -50,7 +51,9 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/vite": "^4.1.5",
+    "@types/datatables.net": "^1.10.28",
     "@types/glidejs__glide": "^3.6.6",
+    "@types/jquery": "^3.5.32",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/scrollreveal": "^0.0.11",
