--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
@@ -56,6 +57,7 @@
     "@types/jquery": "^3.5.32",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-helmet": "^6.1.11",
     "@types/scrollreveal": "^0.0.11",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
