--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
