--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@stripe/stripe-js": "^7.4.0",
+    "@tiptap/react": "^3.0.9",
+    "@tiptap/starter-kit": "^3.0.9",
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
     "datatables.net": "^2.3.2",
@@ -35,6 +37,7 @@
     "pdfmake": "^0.2.20",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
