--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "react-social-icons": "^6.24.0",
