--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@stripe/stripe-js": "^7.4.0",
+    "@tinymce/tinymce-react": "^6.3.0",
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
     "axios": "^1.9.0",
@@ -53,6 +54,7 @@
     "scrollreveal": "^4.0.9",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.6",
+    "tinymce": "^8.1.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
