--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
+    "jwt-decode": "^4.0.0",
     "pdfmake": "^0.2.20",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
