--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.546.0",
     "pdfmake": "^0.2.20",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
