--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
               git clone https://github.com/jcrocker-cmd/nice2strangers_FE.git /srv/nice2strangers-frontend
             else
               cd /srv/nice2strangers-frontend
-              git pull origin main
+              git pull origin main-prod
             fi
             cd /srv/nice2strangers-frontend
             docker compose down
