--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             if [ ! -d "/srv/nice2strangers-frontend/.git" ]; then
-              git clone https://github.com/jcrocker-cmd/nice2strangers_FE.git /srv/nice2strangers-frontend
+              git clone -b main-prod https://github.com/jcrocker-cmd/nice2strangers_FE.git /srv/nice2strangers-frontend
             else
               cd /srv/nice2strangers-frontend
               git fetch
